templates/db-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mifos-database
  namespace: banking-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mifos-database
  serviceName: "mifos-database"
  template:
    metadata:
      labels:
        app: mifos-database
    spec:
      containers:
      - name: mariadb
        image: 'mariadb:11.4'
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - MYSQL_PWD=$MARIADB_ROOT_PASSWORD mariadb-admin -u root ping
          initialDelaySeconds: 30
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - MYSQL_PWD=$MARIADB_ROOT_PASSWORD mariadb-admin -u root ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "5Gi"
            cpu: "2000m"
        volumeMounts:
        - mountPath: /var/lib/mysql/
          name: mariadb-data
        - mountPath: /etc/my.cnf.d/99-custom.cnf
          name: mariadb-config
          subPath: server-collation.cnf
          readOnly: true
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          name: mariadb-config
          subPath: init.sql
          readOnly: true
      volumes:
      - name: mariadb-config
        configMap:
          name: mifos-db-config
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
