templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mariadb")].port}
    argocd.argoproj.io/sync-wave: "1"
  name: mariadb
  namespace: banking-demo
spec:
  ports:
  - name: mariadb
    port: 3306
  selector:
    app: mifos-database
