templates/webapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-app-service
  namespace: banking-demo
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: mifos-web-app
