templates/mifos-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fineract-route
  namespace: banking-demo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  to:
    name: fineract
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  port:
    targetPort: 8443
  wildcardPolicy: None
