templates/webapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web-app-route
  namespace: banking-demo
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  path: /
  to:
    kind: Service
    name: web-app-service
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
